# minion

./: .gitignore  .gitmodules  AGENTS.md  PROCESS.md  README.md  extract_persona_sourcebook.py
.cursor/: hooks.json
.cursor/hooks/: clear-verify-queue.sh  queue-verify-path.sh  run-staged-verify.sh
.cursor/rules/: consult-awesome-skills.mdc  shipping-process.mdc
.github/workflows/: virgin-python.yml
agent/: INSTALL_VM.md  README.md  build_semantic_memory.py  core_profile.md  query_memory.py  retrieval_policy.md
chatgpt_mcp_memory/: README.md  claude_desktop_config.example.json  core_profile.md  minion-mcp.spec  requirements.txt  retrieval_policy.md
chatgpt_mcp_memory/scripts/: build_macos.sh
chatgpt_mcp_memory/src/: api.py  build_brief.py  build_index.py  build_status.py  build_voice.py  chatgpt_export_reader.py  export_bundle.py  fastembed_cache.py  generate_core_profile.py  identity.py  ingest.py  ingest_chatgpt_export.py  ingest_delight.py  llm.py  mcp_server.py  parser_extensions.py  persona_extract.py  preference_cluster.py  retrieval_bias.py  settings.py  store.py  telemetry.py  telemetry_feed.py  version.py  watcher.py
chatgpt_mcp_memory/src/parsers/: __init__.py  image.py  markup_html.py  pdf.py
chatgpt_mcp_memory/tests/: conftest.py  test_api_smoke.py  test_parser_extensions.py  test_store_journal.py  test_telemetry_feed.py
desktop/: .gitignore  README.md  package-lock.json  package.json
desktop/scripts/: package_macos_app_zips.sh  postbuild_macos_sanitize_app.sh  write_latest_json.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/.cargo/: config.toml
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/scripts/: ensure_uv.sh  sync_sidecar.sh
desktop/src-tauri/src/: lib.rs  main.rs
eval/: test_mcp_golden.py
(+2 files in other folders)
