[package]
name = "minion-desktop"
version = "0.2.6"
description = "Tauri desktop for Minion: bundled sidecar, first-run venv, drop ingest, Settings + Claude MCP connect (MINION_DATA_DIR, MINION_INBOX)."
authors = ["Minion"]
edition = "2021"

[lib]
name = "minion_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
