[package]
name = "minion-desktop"
version = "0.3.8"
description = "Minion desktop: drop-zone memory for your agents"
authors = ["Minion"]
edition = "2021"

[lib]
name = "minion_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
